--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 [dependencies]
 tui = "0.5"
 termion = "1.5"
+rspotify = "0.5.0"
+serde = "1.0.94"
+toml = "0.5.1"
+dirs = "1.0"
+failure = "0.1.5"
