--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "spoterm"
 version = "0.1.0"
-authors = ["Hitoshi Togasaki <hitoshi@soundhound.com>"]
+authors = ["Hitoshi Togasaki <togasakitogatoga+github@gmail.com>"]
 edition = "2018"
 
 license = "MIT"
